added relevant icon based on API

--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -33,9 +33,9 @@
               </div>
             </div>
             <div class="details">
-              <div class="pressure">pressure:<span id="pressure"></span></div>
+              <div class="pressure">Pressure:<span id="pressure"></span>mbar</div>
               <div class="Humidity">Humidity:<span id="humidity"></span>%</div>
-              <div class="wind">Wind:<span id="wind"></span></div>
+              <div class="wind">Wind:<span id="wind"></span> km/h</div>
             </div>
 
             <div class="location-btn">
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="col-4">
-            <i class="fa-solid fa-cloud-bolt weather-icon"></i>
+            <img src="" alt="" id="weather-icon">
             <h1 id="city-name">New York</h1>
             <h2 id="date"></h2>
             <div class="search">
