search engine / js

--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -53,16 +53,17 @@
             <h1 id="city-name">New York</h1>
             <h2 id="date"></h2>
             <div class="search">
-              <form>
-                <div class="search-form" id="search-form">
+              <form id="search-form">
+                <div class="search-form">
                   <input
                     type="search"
                     class="form-control"
                     id="input-search-city"
                     placeholder="Search for a city"
+                    autocomplete="off"
                   />
-                </div>
-                <button type="submit" class="btn btn-primary" id="search-btn">
+                </div> 
+                <button type="submit" value="search" class="btn btn-primary" id="search-btn">
                   🔍
                 </button>
               </form>
