--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -25,15 +25,21 @@
         <div class="row">
           <div class="col-4 first-col">
             <div class="temp">
-              <span id="temp"></span>
-            </br>
+              <span id="temp">12</span>
+              <br />
               <span id="description">clear</span>
               <div class="units">
-                °<a href="" id="c-unit">C</a>|°<a href="" id="f-unit">F</a>
+                <a href="#" id="c-unit" class="active">°C</a> |°<a
+                  href="#"
+                  id="f-unit"
+                  >F</a
+                >
               </div>
             </div>
             <div class="details">
-              <div class="pressure">Pressure:<span id="pressure"></span>mbar</div>
+              <div class="pressure">
+                Pressure:<span id="pressure"></span>mbar
+              </div>
               <div class="Humidity">Humidity:<span id="humidity"></span>%</div>
               <div class="wind">Wind:<span id="wind"></span>km/h</div>
             </div>
@@ -49,7 +55,7 @@
             </div>
           </div>
           <div class="col-4">
-            <img src="" alt="" id="weather-icon">
+            <img src="" alt="" id="weather-icon" />
             <h1 id="city-name">New York</h1>
             <h2 id="date"></h2>
             <div class="search">
@@ -62,8 +68,13 @@
                     placeholder="Search for a city"
                     autocomplete="off"
                   />
-                </div> 
-                <button type="submit" value="search" class="btn btn-primary" id="search-btn">
+                </div>
+                <button
+                  type="submit"
+                  value="search"
+                  class="btn btn-primary"
+                  id="search-btn"
+                >
                   🔍
                 </button>
               </form>
@@ -108,7 +119,7 @@
         </div>
       </div>
     </div>
-    <footer>This app is open-soures</footer>
+    <footer>open-sourced code by Negin</footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
