--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             </div>
           </div>
           <div class="col-4">
-            <img src="" alt="" id="weather-icon" />
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+              alt=""
+              id="weather-icon"
+            />
             <h1 id="city-name">New York</h1>
             <h2 id="date"></h2>
             <div class="search">
