added forcast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -85,38 +85,52 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="forcast-icons">
+            <div class="forcasts">
               <div>
-                <i class="fa-solid fa-wind">
-                  <span class="forcast-notes"
-                    ><strong> Tomorrow</strong> <br />
-                    Windy</span
-                  ></i
-                >
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png"
+                  alt=""
+                  id="forcast-icon"
+                />
+                <span class="forcast-date"><strong> Tomorrow</strong></span
+                ><br /><span class="forcast">Windy </span
+                ><span class="weather-forcast-temp-min"> 18°-</span
+                ><span class="weather-forcast-temp-max">20°</span>
               </div>
               <div>
-                <i class="fa-solid fa-smog"
-                  ><span class="forcast-notes"
-                    ><strong> Saturday</strong> <br />
-                    foggy</span
-                  ></i
-                >
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt=""
+                  id="forcast-icon"
+                /><span class="forcast-date"><strong> Saturday</strong></span>
+                <br />
+                <span class="forcast"> foggy</span
+                ><span class="weather-forcast-temp-min"> 18°-</span
+                ><span class="weather-forcast-temp-max">20°</span>
               </div>
               <div>
-                <i class="fa-solid fa-cloud-rain"
-                  ><span class="forcast-notes"
-                    ><strong> Sunday</strong> <br />
-                    Rainy</span
-                  ></i
-                >
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/shower-rain-day.png"
+                  alt=""
+                  id="forcast-icon"
+                />
+                <span class="forcast-date"><strong> Sunday</strong></span>
+                <br />
+                <span class="forcast">Rainy</span
+                ><span class="weather-forcast-temp-min"> 18°-</span
+                ><span class="weather-forcast-temp-max">20°</span>
               </div>
               <div>
-                <i class="fa-regular fa-snowflake"
-                  ><span class="forcast-notes"
-                    ><strong> Monday</strong> <br />
-                    Snowy</span
-                  ></i
-                >
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
+                  alt=""
+                  id="forcast-icon"
+                />
+                <span class="forcast-date"><strong> Monday</strong></span>
+                <br />
+                <span class="forcast">Snowy</span
+                ><span class="weather-forcast-temp-min"> 18°-</span
+                ><span class="weather-forcast-temp-max">20°</span>
               </div>
             </div>
           </div>
