added display forcast function

--- a/index.html
+++ b/index.html
@@ -85,54 +85,7 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="forcasts">
-              <div>
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png"
-                  alt=""
-                  id="forcast-icon"
-                />
-                <span class="forcast-date"><strong> Tomorrow</strong></span
-                ><br /><span class="forcast">Windy </span
-                ><span class="weather-forcast-temp-min"> 18°-</span
-                ><span class="weather-forcast-temp-max">20°</span>
-              </div>
-              <div>
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-                  alt=""
-                  id="forcast-icon"
-                /><span class="forcast-date"><strong> Saturday</strong></span>
-                <br />
-                <span class="forcast"> foggy</span
-                ><span class="weather-forcast-temp-min"> 18°-</span
-                ><span class="weather-forcast-temp-max">20°</span>
-              </div>
-              <div>
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/shower-rain-day.png"
-                  alt=""
-                  id="forcast-icon"
-                />
-                <span class="forcast-date"><strong> Sunday</strong></span>
-                <br />
-                <span class="forcast">Rainy</span
-                ><span class="weather-forcast-temp-min"> 18°-</span
-                ><span class="weather-forcast-temp-max">20°</span>
-              </div>
-              <div>
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-                  alt=""
-                  id="forcast-icon"
-                />
-                <span class="forcast-date"><strong> Monday</strong></span>
-                <br />
-                <span class="forcast">Snowy</span
-                ><span class="weather-forcast-temp-min"> 18°-</span
-                ><span class="weather-forcast-temp-max">20°</span>
-              </div>
-            </div>
+            <div class="forecasts" id="forecast"></div>
           </div>
         </div>
       </div>
