--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         </div>
       </div>
     </div>
-    <footer>open-sourced code by Negin</footer>
+    <footer>
+      <a href="https://github.com/NeginVaez/weather-app">Open-source</a> code by
+      <a href="https://www.instagram.com/negin_v_/">Negin</a>
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
