major css changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 >
               </div>
             </div>
-            <div class="details">
+            <div class="details" id="details">
               <div class="pressure">
                 Pressure:<span id="pressure"></span>mbar
               </div>
@@ -54,13 +54,13 @@
               </button>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4 second-col">
             <img
               src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
               alt=""
               id="weather-icon"
             />
-            <h1 id="city-name">New York</h1>
+            <h1 id="city-name">Paris</h1>
             <h2 id="date"></h2>
             <div class="search">
               <form id="search-form">
@@ -84,7 +84,7 @@
               </form>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4 third-col">
             <div class="forecasts" id="forecast"></div>
           </div>
         </div>
