added current location

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lily+Script+One&family=Lobster&family=PT+Mono&family=Patrick+Hand&family=Rajdhani:wght@500&family=Tilt+Neon&family=Ubuntu:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+
+
     <link rel="stylesheet" href="src/style.css" />
   </head>
 
