bg & hover changed

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
       rel="stylesheet"
     />
 
-
     <link rel="stylesheet" href="src/style.css" />
   </head>
 
-  <body>
+  <body id="body" class="morning">
     <div class="container">
       <div class="wrapper">
         <div class="row">
